--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ My core interest lies in the narrative that data tells. I enjoy the process of d
                     Continuous learning and professional development for improving my skills and knowledge.
                 </p>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="certificates\analytics.png">
+                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="analytics.png">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-x-4">
                                 <i class="fas fa-award text-3xl text-violet-400"></i>
@@ -307,7 +307,7 @@ My core interest lies in the narrative that data tells. I enjoy the process of d
                             <button class="w-full text-center bg-transparent border border-gray-600 text-white py-2 px-4 rounded-lg hover:bg-gray-800 hover:border-gray-500 transition-colors"><i class="fas fa-eye mr-2"></i>View Certificate</button>
                         </div>
                     </div>
-                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="certificates\ecosystem.png">
+                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="ecosystem.png">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-x-4">
                                 <i class="fas fa-award text-3xl text-violet-400"></i>
@@ -331,7 +331,7 @@ My core interest lies in the narrative that data tells. I enjoy the process of d
                             <button class="w-full text-center bg-transparent border border-gray-600 text-white py-2 px-4 rounded-lg hover:bg-gray-800 hover:border-gray-500 transition-colors"><i class="fas fa-eye mr-2"></i>View Certificate</button>
                         </div>
                     </div>
-                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="certificates\leader.png">
+                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="leader.png">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-x-4">
                                 <i class="fas fa-award text-3xl text-violet-400"></i>
@@ -357,7 +357,7 @@ My core interest lies in the narrative that data tells. I enjoy the process of d
                             <button class="w-full text-center bg-transparent border border-gray-600 text-white py-2 px-4 rounded-lg hover:bg-gray-800 hover:border-gray-500 transition-colors"><i class="fas fa-eye mr-2"></i>View Certificate</button>
                         </div>
                     </div>
-                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="certificates\ai.png">
+                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="ai.png">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-x-4">
                                 <i class="fas fa-award text-3xl text-violet-400"></i>
@@ -380,7 +380,7 @@ My core interest lies in the narrative that data tells. I enjoy the process of d
                             <button class="w-full text-center bg-transparent border border-gray-600 text-white py-2 px-4 rounded-lg hover:bg-gray-800 hover:border-gray-500 transition-colors"><i class="fas fa-eye mr-2"></i>View Certificate</button>
                         </div>
                     </div>
-                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="certificates\llm.png">
+                    <div class="bg-gray-900/60 backdrop-blur-sm border border-gray-700 p-6 rounded-lg flex flex-col h-full certificate-item slide-in" data-full-src="llm.png">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-x-4">
                                 <i class="fas fa-award text-3xl text-violet-400"></i>
